regatta/eg-log.txt
warning: unused imports: `Keypair`, `NoiseConfig`, `SwarmBuilder`, `X25519Spec`, `core::upgrade`, `mplex`, `tcp::TokioTcpConfig`
  --> regatta/src/p2p.rs:5:5
   |
5  |     core::upgrade,
   |     ^^^^^^^^^^^^^
...
9  |     mplex,
   |     ^^^^^
10 |     noise::{Keypair, NoiseConfig, X25519Spec},
   |             ^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^
11 |     swarm::{NetworkBehaviourEventProcess, Swarm, SwarmBuilder},
   |                                                  ^^^^^^^^^^^^
12 |     tcp::TokioTcpConfig,
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Axis`, `BarChart`, `Canvas`, `Chart`, `Dataset`, `Direction`, `Line`, `ListItem`, `List`, `MapResolution`, `Map`, `Modifier`, `Rect`, `Rectangle`, `Row`, `Spans`, `Sparkline`, `Table`, `Tabs`, `Wrap`, `symbols`
  --> regatta/src/tender/ui.rs:3:26
   |
3  |     layout::{Constraint, Direction, Layout, Rect},
   |                          ^^^^^^^^^          ^^^^
4  |     style::{Color, Modifier, Style},
   |                    ^^^^^^^^
5  |     symbols,
   |     ^^^^^^^
6  |     text::{Span, Spans},
   |                  ^^^^^
7  |     widgets::canvas::{Canvas, Line, Map, MapResolution, Rectangle},
   |                       ^^^^^^  ^^^^  ^^^  ^^^^^^^^^^^^^  ^^^^^^^^^
8  |     widgets::{
9  |         Axis, BarChart, Block, Borders, Chart, Dataset, Gauge, List, ListItem, Paragraph, Row,
   |         ^^^^  ^^^^^^^^                  ^^^^^  ^^^^^^^         ^^^^  ^^^^^^^^             ^^^
10 |         Sparkline, Table, Tabs, Wrap,
   |         ^^^^^^^^^  ^^^^^  ^^^^  ^^^^

warning: unused import: `std::sync::RwLock`
  --> regatta/src/lib.rs:18:5
   |
18 | use std::sync::RwLock;
   |     ^^^^^^^^^^^^^^^^^

warning: unused imports: `thread`, `time`
  --> regatta/src/lib.rs:20:11
   |
20 | use std::{thread, time};
   |           ^^^^^^  ^^^^

warning: unused imports: `Duration`, `sleep`
  --> regatta/src/lib.rs:22:19
   |
22 | use tokio::time::{sleep, Duration};
   |                   ^^^^^  ^^^^^^^^

warning: unused import: `thiserror::Error`
  --> regatta/src/lib.rs:24:5
   |
24 | use thiserror::Error;
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `libp2p::futures::StreamExt`
 --> regatta/src/p2p.rs:3:5
  |
3 | use libp2p::futures::StreamExt;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Transport`
  --> regatta/src/p2p.rs:13:31
   |
13 |     NetworkBehaviour, PeerId, Transport,
   |                               ^^^^^^^^^

warning: unused import: `io::AsyncBufReadExt`
  --> regatta/src/p2p.rs:19:17
   |
19 | use tokio::{fs, io::AsyncBufReadExt, sync::mpsc};
   |                 ^^^^^^^^^^^^^^^^^^^

warning: unused variable: `e`
   --> regatta/src/lib.rs:131:19
    |
131 |         .map_err(|e| anyhow!("could not read file `{:?}`", &args.path))?;
    |                   ^ help: if this is intentional, prefix it with an underscore: `_e`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `cmd`
   --> regatta/src/p2p.rs:315:24
    |
315 | async fn send_shutdown(cmd: &str) {}
    |                        ^^^ help: if this is intentional, prefix it with an underscore: `_cmd`

warning: function is never used: `read_local_recipes`
   --> regatta/src/p2p.rs:208:10
    |
208 | async fn read_local_recipes() -> Result<Recipes> {
    |          ^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: 12 warnings emitted

   Compiling regatta v0.1.0 (/home/hedge/src/swanling/regatta)
error[E0599]: the method `fuse` exists for struct `signal_hook_tokio::SignalsInfo`, but its trait bounds were not satisfied
  --> regatta/examples/01-pages-hello-ok-int-c.rs:14:31
   |
14 |     let mut signals = signals.fuse();
   |                               ^^^^ method cannot be called on `signal_hook_tokio::SignalsInfo` due to unsatisfied trait bounds
   | 
  ::: /home/hedge/.cargo/registry/src/github.com-1ecc6299db9ec823/signal-hook-tokio-0.3.0/src/lib.rs:92:1
   |
92 | pub struct SignalsInfo<E: Exfiltrator = SignalOnly>(OwningSignalIterator<UnixStream, E>);
   | ----------------------------------------------------------------------------------------- doesn't satisfy `signal_hook_tokio::SignalsInfo: Iterator`
   |
   = note: the following trait bounds were not satisfied:
           `signal_hook_tokio::SignalsInfo: Iterator`
           which is required by `&mut signal_hook_tokio::SignalsInfo: Iterator`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
error: could not compile `regatta`

To learn more, run the command again with --verbose.
